--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,11 @@
     "angular-aria": "^1.6.6",
     "angular-material": "1.1.5",
     "angular-material-data-table": "^0.10.10",
-    "angular-route": "^1.6.6",    
+    "angular-material-sidemenu": "^1.0.2",
+    "angular-route": "^1.6.6",
     "css-loader": "^0.28.7",
-    "simple-grid-material": "git+https://github.com/soulhave/simpleGridMaterial.git",    
-    "style-loader": "^0.18.2",
-    "lodash": "^4.17.4"    
+    "lodash": "^4.17.4",
+    "simple-grid-material": "git+https://github.com/soulhave/simpleGridMaterial.git",
+    "style-loader": "^0.18.2"
   }
 }
