--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "angular-material-sidemenu": "^1.0.2",
     "angular-route": "^1.6.6",
     "css-loader": "^0.28.7",
+    "firebase": "^4.5.1",
     "lodash": "^4.17.4",
     "simple-grid-material": "git+https://github.com/soulhave/simpleGridMaterial.git",
     "style-loader": "^0.18.2"
